--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
   - name: web
     env: python
     build_command: pip install -r requirements.txt
-    start_command: gunicorn myproject.wsgi --bind 0.0.0.0:$PORT
+    start_command: gunicorn jiji_api.wsgi --bind 0.0.0.0:$PORT
 
 databases:
-  - name: my-postgresql-db   # Choose a name for your Render PostgreSQL database
+  - name: shop   # Choose a name for your Render PostgreSQL database
     type: postgresql         # Specify PostgreSQL as the database type
